fix text alignment

--- a/tictactoe.css
+++ b/tictactoe.css
@@ -1,16 +1,16 @@
 .jumbotron {
-  margin: 5% auto;
-  margin-left: 43%;
+	margin: 5% auto;
+	text-align: center;
 }
 
 td {
-  height:150px;
-  width:150px;
-  text-align: center;
-  border: 5px solid black;
-  font-size: 100px;
+	height: 150px;
+	width: 150px;
+	text-align: center;
+	border: 5px solid black;
+	font-size: 100px;
 }
 
 table {
-  margin: auto auto;
+	margin: auto auto;
 }
